objects/CMPL123CME__MedDRA_Lowest_Level_Term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Backup_JSON__c</fullName>
        <description>This is a backend field for cleanup job</description>
        <inlineHelpText>This is a backend field for cleanup job</inlineHelpText>
        <label>Backup JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Transaction_ID__c</fullName>
        <description>Used to store an unique ID</description>
        <label>Transaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of Lowest Level Term</description>
        <inlineHelpText>Active Status of Lowest Level Term</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_costart_sym__c</fullName>
        <description>Symbol allocated by the COSTART terminology</description>
        <inlineHelpText>Symbol allocated by the COSTART terminology</inlineHelpText>
        <label>LLT COSTART Code</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_currency__c</fullName>
        <description>Indicates whether the Lowest Level Term is current or non-current</description>
        <inlineHelpText>Indicates whether the Lowest Level Term is current or non-current</inlineHelpText>
        <label>LLT Currency</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_harts_code__c</fullName>
        <description>Code allocated by the HARTS terminology</description>
        <inlineHelpText>Code allocated by the HARTS terminology</inlineHelpText>
        <label>LLT HARTS Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_icd10_code__c</fullName>
        <description>Code allocated by the 10th Revision of the International Classification of Diseases, ICD-10</description>
        <inlineHelpText>Code allocated by the 10th Revision of the International Classification of Diseases, ICD-10</inlineHelpText>
        <label>LLT ICD-10 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_icd9_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases, ICD-9</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases, ICD-9</inlineHelpText>
        <label>LLT ICD-9 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_icd9cm_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification, ICD-9-CM</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification, ICD-9-CM</inlineHelpText>
        <label>LLT ICD-9-CM Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_jart_code__c</fullName>
        <description>Code allocated by the J-ART terminology</description>
        <inlineHelpText>Code allocated by the J-ART terminology</inlineHelpText>
        <label>LLT J-ART Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kana1__c</fullName>
        <description>LLT Japanese reading (half-width kana). Where there is another reading</description>
        <inlineHelpText>LLT Japanese reading (half-width kana). Where there is another reading</inlineHelpText>
        <label>LLT Kana1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kana2__c</fullName>
        <description>LLT Japanese reading (half-width kana). Where there is another reading</description>
        <inlineHelpText>LLT Japanese reading (half-width kana). Where there is another reading</inlineHelpText>
        <label>LLT Kana2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kana__c</fullName>
        <description>LLT Japanese reading (half-width kana)</description>
        <inlineHelpText>LLT Japanese reading (half-width kana)</inlineHelpText>
        <label>LLT Kana</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kanji__c</fullName>
        <description>LLT Kanji Name</description>
        <inlineHelpText>LLT Kanji Name</inlineHelpText>
        <label>LLT Kanji</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_name__c</fullName>
        <description>Full name of the Lowest Level Term</description>
        <externalId>true</externalId>
        <inlineHelpText>Full name of the Lowest Level Term</inlineHelpText>
        <label>LLT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>LLT Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_whoart_code__c</fullName>
        <description>Code allocated by the WHO-ART terminology</description>
        <inlineHelpText>Code allocated by the WHO-ART terminology</inlineHelpText>
        <label>LLT WHO-ART Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_release_key__c</fullName>
        <description>Used to store an release info</description>
        <externalId>true</externalId>
        <label>MedDRA Release Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the Preferred Term</description>
        <inlineHelpText>8-digit code to identify the Preferred Term</inlineHelpText>
        <label>PT Code</label>
        <referenceTo>CMPL123CME__MedDRA_Preferred_Term__c</referenceTo>
        <relationshipLabel>MedDRA Lowest Level Term</relationshipLabel>
        <relationshipName>MedDRA_Lowest_Level_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MedDRA Lowest Level Term</label>
    <nameField>
        <label>LLT Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA Lowest Level Term</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__LLT_Code_Should_Be_8_Characters_Only</fullName>
        <active>true</active>
        <description>Lowest Level Term Code value  must have 8 characters only</description>
        <errorConditionFormula>OR(
    LEN(Name) &lt; 8 ,
    LEN(Name) &gt; 8 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>LLT Code value  must have 8 characters only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__LLT_Name_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__llt_name__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__llt_name__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>